# sekura

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: django.yml
sekura/: .coveragerc  manage.py  pytest.ini
sekura/archive/: admin.py  forms.py  models.py  urls.py  views.py
sekura/archive/migrations/: 0001_initial.py  0002_alter_archive_content.py  0003_alter_archive_content.py
sekura/archive/templates/: archive_detail.html  archive_edit.html  archive_list.html
sekura/archive/tests/: factories.py  test_create.py  test_edit.py  test_security.py  test_views.py
sekura/contact/: forms.py  models.py  urls.py  views.py
sekura/contact/migrations/: 0001_initial.py
sekura/contact/templates/: detail.html  edit.html  index.html
sekura/contact/tests/: factories.py  test_create.py  test_edit.py  test_security.py  test_views.py
sekura/risk/: admin.py  factories.py  forms.py  models.py  urls.py  views.py
sekura/risk/migrations/: 0001_initial.py  0002_alter_risk_custom_id.py  0003_alter_risk_treatment.py  0004_alter_risk_treatment.py  0005_grouppermission_userpermission.py  0006_risk_owner.py  0007_grouppermission_assign_owner_and_more.py  0008_remove_userpermission_risk_and_more.py  0009_alter_risk_options.py
sekura/risk/templates/: risk_detail.html  risk_edit.html  risk_list.html
sekura/risk/tests/: factories.py  test_create.py  test_edit.py  test_model_risk.py  test_security.py  test_views.py
sekura/sekura/: asgi.py  factories.py  settings.py  urls.py  views.py  wsgi.py
sekura/templates/: base.html
(+2 files in other folders)
