[tool.poetry]
name = "sekura"
version = "0.1.0"
description = ""
authors = ["Miguel Angel Garcia <miguelangel.garcia@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.2"
django-bootstrap-form = "^3.4"
django-bootstrap5 = "^23.4"
sentry-sdk = {extras = ["django"], version = "^1.40.6"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ipython = "^8.21.0"
pytest-django = "^4.8.0"
pytest-cov = "^4.1.0"
beautifulsoup4 = "^4.12.3"
factory-boy = "^3.3.0"
faker = "^24.1.0"
pytest-codecov = "^0.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
